Implement ramp-up

--- a/talk/qsim.tex
+++ b/talk/qsim.tex
@@ -184,10 +184,10 @@ arrival or processing times statistical
 
 \begin{frame}[fragile]
 \vspace{1em}
-\begin{lstlisting}[language=Perl,basicstyle=\footnotesize]
+\begin{lstlisting}[language=Perl,basicstyle=\footnotesize,deletekeywords={time}]
 sub tb-producer() {
     my $interval = 100;
-    if 3000 < $*current-time < 7000 {
+    if 2000 < $*current-time < 8000 {
         $interval = 35;
     }
     return (random-poisson-distance($interval), "");
